--- a/myapp/templates/menu.html
+++ b/myapp/templates/menu.html
@@ -1,24 +1,19 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load static %}
-
 {% block contents %}
 <h1>Menu</h1>
-
 <!--Begin col-->
 <div class="column">
-    {% if menu %}
-        {% for item in menu %}
-        <p>
+    {% for item in menu.menu %}
+    <p>
         <a href="{% url 'menu_item' pk=item.pk %}">
             {{ item.name }}
             </a>
         <span class="menu-price">
             ${{ item.price }}.00
         </span>
-        </p>
-        {% endfor %}
-    {% else %}
-        <p>No item to display.</p>
-    {% endif %}
+    </p>
+    {% endfor %}
 </div>
-{% endblock  %} 
+<!--End col-->
+{% endblock %}
